[package]
name = "claude-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal multiplexer for Claude Code sessions"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
vt100 = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
regex-lite = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
